# openg2p-fastapi-template

./: .editorconfig  .pre-commit-config.yaml  CODE-OF-CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  copier.yml  pyproject.toml
src/: .pre-commit-config.yaml.jinja  README.md.jinja  main.py.jinja  pyproject.toml.jinja  {% if github_ci_docker_build %}Dockerfile{% endif %}.jinja
src/.github/workflows/: push-trigger.yml.jinja  {% if github_ci_docker_build %}docker-build.yml{% endif %}.jinja  {% if github_ci_openapi_publish %}openapi-push.yml{% endif %}.jinja  {% if github_ci_pypi_publish %}publish.yml{% endif %}.jinja  {% if github_ci_tests %}test.yml{% endif %}.jinja
src/src/{{ module_name }}/: __main__.py.jinja  app.py.jinja  config.py.jinja
