[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openg2p-fastapi-template"
version = "1.0.0"
authors = [
  { name="OpenG2P", email="info@openg2p.org" },
]
description = "Template for FastAPI based backend repositories"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Operating System :: OS Independent",
]
dependencies=[
  "copier ~=8.0"
]

[project.urls]
Homepage = "https://openg2p.org"
Documentation = "https://docs.openg2p.org/"
Repository = "https://github.com/openg2p/openg2p-fastapi-common"
Source = "https://github.com/openg2p/openg2p-fastapi-common"
